changed env_production APP_URL to http://lbaw2035.lbaw-prod.fe.up.pt/

--- a/.env_production
+++ b/.env_production
@@ -1,8 +1,8 @@
-APP_NAME=Thingy
+APP_NAME=ArtNow
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://lbaw-prod.fe.up.pt:80/demo/
+APP_URL=http://lbaw2035.lbaw-prod.fe.up.pt/
 
 DB_CONNECTION=pgsql
 DB_HOST=dbm.fe.up.pt
