--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=ArtNow
+AAPP_NAME=ArtNow
 APP_ENV=local
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
@@ -17,4 +17,6 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+
 
