--- a/.env_production
+++ b/.env_production
@@ -5,7 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://lbaw2035.lbaw-prod.fe.up.pt
 
 DB_CONNECTION=pgsql
-DB_HOST=dbm.fe.up.pt
+DB_HOST=10.227.243.16
 DB_PORT=5432
 
 BROADCAST_DRIVER=log
