--- a/.env_production
+++ b/.env_production
@@ -2,7 +2,7 @@ APP_NAME=ArtNow
 APP_KEY=base64:xWdLc4KY3iJKHCupluHuu1nDwvprk4OAqnsc6RRrGsA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://lbaw2035.lbaw-prod.fe.up.pt
+APP_URL=lbaw2035.lbaw-prod.fe.up.pt
 
 DB_CONNECTION=pgsql
 DB_HOST=10.227.243.16
