not sending mail yet: conetcion could no tbe esetablish

--- a/.env
+++ b/.env
@@ -18,5 +18,11 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=art.now.events@gmail.com
+MAIL_PASSWORD=lbaw2035
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADRESS=art.now.events@gmail.com
 
