--- a/.env_production
+++ b/.env_production
@@ -13,3 +13,10 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
+
+MAIL_DRIVER=sendmail
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=art.now.events@gmail.com
+MAIL_PASSWORD=lbaw2035
+MAIL_ENCRYPTION=ssl
