--- a/.env
+++ b/.env
@@ -18,11 +18,9 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
 MAIL_USERNAME=art.now.events@gmail.com
 MAIL_PASSWORD=lbaw2035
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADRESS=art.now.events@gmail.com
-
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_ENCRYPTION=ssl
