--- a/.env_production
+++ b/.env_production
@@ -14,3 +14,10 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
+
+MAIL_USERNAME=art.now.events@gmail.com
+MAIL_PASSWORD=lbaw2035
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_ENCRYPTION=ssl
